tests/rosetta/transpiler/Rust/copy-a-string-2.rs
// Generated by Mochi transpiler v0.10.57 on 2025-08-05 01:46 +0700
use std::sync::atomic::{AtomicBool, AtomicI64, Ordering};
use std::time::{SystemTime, UNIX_EPOCH};
static NOW_SEEDED: AtomicBool = AtomicBool::new(false);
static NOW_SEED: AtomicI64 = AtomicI64::new(0);
fn _now() -> i64 {
    if !NOW_SEEDED.load(Ordering::SeqCst) {
        if let Ok(s) = std::env::var("MOCHI_NOW_SEED") {
            if let Ok(v) = s.parse::<i64>() {
                NOW_SEED.store(v, Ordering::SeqCst);
                NOW_SEEDED.store(true, Ordering::SeqCst);
            }
        }
    }
    if NOW_SEEDED.load(Ordering::SeqCst) {
        let seed = (NOW_SEED.load(Ordering::SeqCst)*1664525 + 1013904223) % 2147483647;
        NOW_SEED.store(seed, Ordering::SeqCst);
        seed
    } else {
        SystemTime::now().duration_since(UNIX_EPOCH).unwrap().as_nanos() as i64
    }
}
fn _mem() -> i64 {
    if let Ok(mut f) = std::fs::File::open("/proc/self/statm") {
        let mut s = String::new();
        use std::io::Read;
        if f.read_to_string(&mut s).is_ok() {
            if let Some(rss) = s.split_whitespace().nth(1) {
                if let Ok(v) = rss.parse::<i64>() {
                    return v * 4096;
                }
            }
        }
    }
    0
}
static mut g_creature: String = String::new();
static mut g_pointer: Vec<i64> = Vec::new();
fn main() {
    unsafe {
        g_creature = String::from("shark").clone();
        g_pointer = vec![g_creature.clone()];
                let _start: i64 = _now();
        println!("{}", format!("{}{}", "creature = ", g_creature));
        println!("{}", "pointer = 0");
        println!("{}", format!("{}{}", "*pointer = ", g_pointer.clone()[0 as usize]));
        g_pointer[0 as usize] = "jellyfish";
        let mut creature: i64 = g_pointer.clone()[0 as usize];
        println!("{}", format!("{}{}", "*pointer = ", g_pointer.clone()[0 as usize]));
        println!("{}", format!("{}{}", "creature = ", g_creature));
        let _end: i64 = _now();
        let duration_us: i64 = ((_end - _start) / 1000);
        let memory_bytes: i64 = _mem();
        println!("{{\n  \"duration_us\": {},\n  \"memory_bytes\": {},\n  \"name\": \"{}\"\n}}", duration_us, memory_bytes, "main");

    }
}
